modified:   Dockerfile 	new file:   root/app/webserver/static/favicon.png 	modified:   root/app/webserver/templates/dashboard.html 	modified:   root/app/webserver/templates/layout.html 	modified:   root/app/webserver/youtube-dl.py 	modified:   root/app/youtube-dl/updater.sh

--- a/root/app/webserver/templates/layout.html
+++ b/root/app/webserver/templates/layout.html
@@ -18,8 +18,8 @@
                 </div>
             </div>
             <div class="ui container">
-                <form class="item" method="get" action="/download">
-                    <input type="text" name="URL" size="100%" placeholder="URL">
+                <form class="item" method="post" action="/download">
+                    <input type="text" name="url" size="100%" placeholder="URL">
                     &nbsp;
                     <button class="ui inverted button">Download</button>
                 </form>
