--- a/root/app/webserver/templates/layout.html
+++ b/root/app/webserver/templates/layout.html
@@ -11,6 +11,7 @@
     <div class="ui inverted menu">
         <div class="ui container">
             <a href="/" class="item"><i class="home icon"></i>Dashboard</a>
+            <a href="/restart-youtube-dl" class="item"><i class="sync alternate icon"></i>Restart youtube-dl</a>
             <div class="ui simple dropdown item">Edit<i class="dropdown icon"></i>
                 <div class="menu">
                     <a class="item" href="/edit/args">Args</a>
