--- a/root/app/webserver/templates/archive.html
+++ b/root/app/webserver/templates/archive.html
@@ -3,10 +3,16 @@
 {% block content %}
 <div class="ui container">
     <form method="post" action="/edit/archive/save">
-    <h2 class="ui header">Archive.txt</h2>
-        <textarea name="archive_new" style="width:100%;height:600px;font-family:Courier New, monospace;white-space: pre-line">
-{% for line in archive %}{{ line }}{% endfor %}</textarea>
-        <input type="submit" value="save"/>
+        <h2 class="ui header">Archive.txt</h2>
+        <div class="ui form">
+            <div class="field">
+                <textarea name="archive_new" rows="30"
+                    style="width:100%;font-family:Courier New, monospace;white-space: pre-line">{% for line in archive %}{{ line }}{% endfor %}</textarea>
+            </div>
+            <div class="field">
+                <input type="submit" value="Save" class="ui primary button" />
+            </div>
+        </div>
     </form>
 </div>
 {% endblock %}
