--- a/root/app/webserver/templates/channels.html
+++ b/root/app/webserver/templates/channels.html
@@ -3,10 +3,17 @@
 {% block content %}
 <div class="ui container">
     <form method="post" action="/edit/channels/save">
-    <h2 class="ui header">Channels.txt</h2>
-        <textarea name="channels_new" style="width:100%;height:600px;font-family:Courier New, monospace;white-space: pre-line">
-{% for line in channels %}{{ line }}{% endfor %}</textarea>
-        <input type="submit" value="save"/>
+        <h2 class="ui header">Channels.txt</h2>
+
+        <div class="ui form">
+            <div class="field">
+                <textarea name="channels_new" rows="30"
+                    style="width:100%;font-family:Courier New, monospace;white-space: pre-line">{% for line in channels %}{{ line }}{% endfor %}</textarea>
+            </div>
+            <div class="field">
+                <input type="submit" value="Save" class="ui primary button" />
+            </div>
+        </div>
     </form>
 </div>
 {% endblock %}
