--- a/root/app/webserver/templates/dashboard.html
+++ b/root/app/webserver/templates/dashboard.html
@@ -2,22 +2,18 @@
 
 {% block content %}
 <div class="ui container">
-    <br>
-    <p>Everything is probably totally borked, I know nothing of web development thus this is very much WIP.</p>
-    <p>Good luck, brave soul.</p>
-
     {% if not download_id %}
-        <div class="ui segment">
-            <h3>Log:</h3>
-            <pre class="logs" id="text"></pre>
-        </div>
+    <div class="ui ">
+        <h3>Log:</h3>
+        <pre class="logs" id="text"></pre>
+    </div>
 
     <script>
         function fetchLog() {
             fetch(`/log/youtube-dl`)
                 .then(response => response.text())
                 .then(data => {
-	            const fileContentElement = document.getElementById('text');
+                    const fileContentElement = document.getElementById('text');
                     const isScrolledToBottom = fileContentElement.scrollHeight - fileContentElement.scrollTop === fileContentElement.clientHeight;
                     fileContentElement.textContent = data;
                     if (isScrolledToBottom) {
@@ -31,10 +27,10 @@
     {% endif %}
 
     {% if download_id %}
-        <div class="ui segment">
-            <h3>Download log:</h3>
-            <pre class="logs" id="text"></pre>
-        </div>
+    <div class="ui segment">
+        <h3>Download log:</h3>
+        <pre class="logs" id="text"></pre>
+    </div>
 
     <script>
         function fetchLog() {
@@ -53,6 +49,10 @@
         fetchLog();
     </script>
     {% endif %}
+
+    <br>
+    <p>Everything is probably totally borked, I know nothing of web development thus this is very much WIP.</p>
+    <p>Good luck, brave soul.</p>
 </div>
 <style>
     .logs {
@@ -65,7 +65,7 @@
         border: 1px solid #ccc;
         background-color: #f5f5f5;
         max-height: 600px;
-	overflow-y: auto;
+        overflow-y: auto;
     }
 </style>
 {% endblock %}
