feat: add base path configuration to web ui to support path based reverse proxy config

--- a/root/app/youtube-dl-webui/templates/args.html
+++ b/root/app/youtube-dl-webui/templates/args.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="ui container">
-    <form method="post" action="/edit/args/save">
+    <form method="post" action="{{ base_path }}/edit/args/save">
         <h2 class="ui header">Args.conf</h2>
         <div class="ui form">
             <div class="field">
