--- a/root/app/youtube-dl-webui/templates/archive.html
+++ b/root/app/youtube-dl-webui/templates/archive.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="ui container">
-    <form method="post" action="/edit/archive/save">
+    <form method="post" action="{{ base_path }}/edit/archive/save">
         <h2 class="ui header">Archive.txt</h2>
         <div class="ui form">
             <div class="field">
