--- a/root/app/youtube-dl-webui/templates/channels.html
+++ b/root/app/youtube-dl-webui/templates/channels.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="ui container">
-    <form method="post" action="/edit/channels/save">
+    <form method="post" action="{{ base_path }}/edit/channels/save">
         <h2 class="ui header">Channels.txt</h2>
 
         <div class="ui form">
